Add quick sort